# Simple-User-Editor

./: README.md
mikroelektronika/: users.json
mikroelektronika - Copy/: users.json
mikroelektronika - Copy/headers/: guiwidgetfunctions.h
mikroelektronika - Copy/src/: gui.cpp  guiwidgetfunctions.cpp
mikroelektronika/headers/: briefusermodel.h  detailedusermodel.h  gui.h  guiinteractivityfunctions.h  guiwidgetfunctions.h  jsonhandler.h  modelviewer.h  updatableimage.h  user.h  userdetailstableview.h  usersbrieftableview.h
mikroelektronika/src/: gui.cpp  guiinteractivityfunctions.cpp  guiwidgetfunctions.cpp  jsonhandler.cpp  main.cpp  modelviewer.cpp  updatableimage.cpp  user.cpp  userdetailstableview.cpp  usersbrieftableview.cpp
simple_user_editor/: CMakeLists.txt  style.qss  users.json
simple_user_editor/headers/: gui.h  guiinteractivityfunctions.h  jsonhandler.h  updatableimage.h  userdetailstableview.h
simple_user_editor/src/: briefusermodel.cpp  detailedusermodel.cpp  gui.cpp  guiwidgetfunctions.cpp  jsonhandler.cpp  main.cpp  modelviewer.cpp  updatableimage.cpp  user.cpp  usersbrieftableview.cpp
